--- a/Lesson-9/index.html
+++ b/Lesson-9/index.html
@@ -8,6 +8,42 @@
     <link rel="stylesheet"href="CSS/main.css">
 </head>
 <body> 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, labore, minus veniam tempore unde iusto, aliquid odio soluta ut ipsam quaerat commodi rem natus saepe corporis? Dolore doloribus nobis sed.</p>
+    <p class="big-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, labore, minus veniam tempore unde iusto, aliquid odio soluta ut ipsam quaerat commodi rem natus saepe corporis? Dolore doloribus nobis sed.</p>
+    <p class="small-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur velit ad repudiandae expedita ipsam quibusdam esse obcaecati libero voluptate beatae? Neque accusantium vel numquam quisquam in repellendus laudantium at dolor.</p>
+    <p class="some-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium expedita ea deserunt dicta dignissimos enim ad ex quibusdam ab ipsam voluptate molestias distinctio modi, aliquid vitae eos facilis dolor debitis!</p>
+
+    <div class="first-div">
+        CSS is awsome!
+    </div>
+    <div class="second-div">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio provident harum placeat iure alias similique ab tempore saepe officia, quo magnam quaerat illum, reprehenderit, quam veniam iusto commodi nostrum?
+    </div>
+    <div class="image-div">
+    Foo
+    </div>
+    <div>
+        Foo
+    </div>
+    <div class="wrapper">
+        <div class="friendly">Bar</div>
+        <div class="friendly">Bar</div>
+    </div>
+    <div>Foo
+    </div>
+
+    <div class="box">
+        Foo
+    </div>
+
+    <div class="block block-1">Foo</div>
+    <div class="block block-2">Foo</div>
+    <div class="block block-3">Foo</div>
+
+    <div class="flex-wrapper">
+        <div class="flex-block">Foo</div>
+        <div class="flex-block">Foo</div>
+        <div class="flex-block">Foo</div>
+    </div>
+
 </body>
 </html>
