--- a/Lesson-14/Task-6.html
+++ b/Lesson-14/Task-6.html
@@ -17,6 +17,11 @@
                 Album description
             </h5>
         </div>
+        <div class="row">
+            <div class="col">
+                
+            </div>
+        </div>
 
 
 
