--- a/Lesson-20/tasksFuncions.html
+++ b/Lesson-20/tasksFuncions.html
@@ -7,6 +7,6 @@
     <title>Tasks JS</title>
 </head>
 <body>
-    <script src="JS/TaskLoops.js"></script>
+    <script src="JS/tasksFunctions.js"></script>
 </body>
 </html>
