--- a/Lesson-20/lesson20.html
+++ b/Lesson-20/lesson20.html
@@ -7,6 +7,6 @@
     <title>Tasks JS</title>
 </head>
 <body>
-    <script src="JS/TaskLoops.js"></script>
+    <script src="JS/lesson20.js"></script>
 </body>
 </html>
