final task update

--- a/FINAL TASK/page2.html
+++ b/FINAL TASK/page2.html
@@ -7,12 +7,13 @@
     <title>Articles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CS/finalTask.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
     <nav class="navbar navbar-expand-md px-3">
         <a class="navbar-brand">
-        <img src="images/flag.jpg" class="rounded float-start">
+        <img src="images/bandera-removebg-preview-removebg-preview.png" class="rounded float-start">
         </a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +27,7 @@
                     <a class="nav-link" href="page2.html">Articles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="page3.html">Chat</a>
+                    <a class="nav-link" href="page6.html">Chat</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="page4.html">Register</a>
@@ -47,48 +48,48 @@
   <span class="text-muted">Articles</span></p>
      </div>
 <div class="row">
-<div class="col-2 p-3">
+<div class="col-2 p-3 mb-3 border border-secondary">
 <div class="">
-    <img width="80%" src="images/mexican-food3.jpg" alt="" class="img-fluid">
+    <img width="100%" src="images/mexican-art.jpeg" alt="" class="img-fluid">
 </div>
 
 </div>
 <div class="col-10">
     <div class="text-justify article">
         <p>
-            <a href="page3.html"> <h5>Article 1</h5></a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quam et dicta, neque veritatis error natus, sapiente, aperiam voluptate vel sunt harum repellat autem eaque nisi. Saepe porro doloribus id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis exercitationem obcaecati in incidunt vitae alias reiciendis delectus quisquam dolore debitis itaque officia mollitia excepturi accusamus explicabo, quod libero nesciunt nisi.
+            <a href="page3.html"> <h5>Otomi</h5></a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quam et dicta, neque veritatis error natus, sapiente, aperiam voluptate vel sunt harum repellat autem eaque nisi. Saepe porro doloribus id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis exercitationem obcaecati in incidunt vitae alias reiciendis delectus quisquam dolore debitis itaque officia mollitia excepturi accusamus explicabo, quod libero nesciunt nisi.
         </p>
     </div>
 </div>
 <hr/>
 </div>
 <div class="row">
-    <div class="col-2 p-3">
+    <div class="col-2 p-3 mb-3 border border-secondary">
     <div class="">
-        <img width="80%" src="images/churros.jpg" alt="" class="img-fluid">
+        <img width="100%" src="images/talavera.jpg" alt="" class="img-fluid">
     </div>
     
     </div>
     <div class="col-10">
         <div class="text-justify article">
             <p>
-               <h5>Article 1</h5> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta illo aperiam odit dignissimos. Nobis unde amet dicta distinctio ut eum, officia, porro aliquid aliquam consequatur minus, magnam inventore commodi perspiciatis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus dolorem corporis optio similique ea nulla, est nisi, animi pariatur unde voluptatem laboriosam eveniet, at eos cum? Voluptatem, explicabo laborum?
+               <h5>Talavera</h5> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta illo aperiam odit dignissimos. Nobis unde amet dicta distinctio ut eum, officia, porro aliquid aliquam consequatur minus, magnam inventore commodi perspiciatis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus dolorem corporis optio similique ea nulla, est nisi, animi pariatur unde voluptatem laboriosam eveniet, at eos cum? Voluptatem, explicabo laborum?
             </p>
         </div>
     </div>
 <hr/>
     </div>
     <div class="row">
-        <div class="col-2 p-3">
+        <div class="col-2 p-3 border border-secondary">
         <div class="">
-            <img width="80%" src="images/mexican-food2.jpg" alt="" class="img-fluid">
+            <img width="100%" src="images/alebrije.jpg" alt="" class="img-fluid">
         </div>
         
         </div>
         <div class="col-10">
             <div class="text-justify article">
                 <p>
-                   <h5>Article 1</h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magni voluptatibus, quae quod perferendis, doloremque consequatur, officia itaque consectetur sit est praesentium delectus possimus beatae pariatur quibusdam hic cupiditate in. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis et facere repudiandae perferendis! Id ducimus beatae pariatur hic quo neque! Minima eaque provident quas sit eos eveniet est quos rerum.
+                   <h5>Alebrijes</h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magni voluptatibus, quae quod perferendis, doloremque consequatur, officia itaque consectetur sit est praesentium delectus possimus beatae pariatur quibusdam hic cupiditate in. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis et facere repudiandae perferendis! Id ducimus beatae pariatur hic quo neque! Minima eaque provident quas sit eos eveniet est quos rerum.
                 </p>
             </div>
         </div>
@@ -112,6 +113,42 @@
          </div> 
     </div>
 </div>
-
+<footer class="text-center text-white" style="background-color: #f1f1f1;">
+    <div class="text-center text-dark pt-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2021 Copyright:
+      <a class="text-dark" href="page5.html">
+        <img src="images/cat.png" class="img-fluid batman" alt="cat"><span class="btn btn-secondary batmanText"><sup> BATMAN's DESIGNS</sup></span></a>
+    </div>
+    <div class="text-center text-dark" style="background-color: rgba(0, 0, 0, 0.2);">
+      <a
+      class="btn btn-link btn-floating btn-lg text-dark m-1"
+      href="#"
+      role="button"
+      data-mdb-ripple-color="dark"
+      ><i class="fa fa-instagram"></i>
+    </a>
+    <a
+      class="btn btn-link btn-floating btn-lg text-dark m-1"
+      href="#"
+      role="button"
+      data-mdb-ripple-color="dark"
+      ><i class="fa fa-facebook"></i>
+    </a>
+    <a
+    class="btn btn-link btn-floating btn-lg text-dark m-1"
+    href="#"
+    role="button"
+    data-mdb-ripple-color="dark"
+    ><i class="fa fa-twitter"></i>
+  </a>
+  <a
+    class="btn btn-link btn-floating btn-lg text-dark m-1"
+    href="#"
+    role="button"
+    data-mdb-ripple-color="dark"
+    ><i class="fa fa-pinterest"></i>
+  </a>
+    </div>
+  </footer>
 </body>
 </html>
