--- a/FINAL TASK/success.html
+++ b/FINAL TASK/success.html
@@ -49,8 +49,8 @@
          <div class="row"><h5>Chat</h5>
          </div>
        </div>
-       <div class="container border border-dark">
-
+       <div class="container thankyou">
+        <h3>Thank you! We will be sending a cat over shortly!</h3>
             
         </div>
 
