--- a/FINAL TASK/index.html
+++ b/FINAL TASK/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
   <div>
-    <h3 class="text-center mt-3 headingFirst">50 shades of Mexico</h3>
+    <h3 class="text-center mt-3 headingFirst">Colours of Mexico</h3>
   </div>
     <div class="container mt-3">
         <div class="row border border-secondary">
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/comida-mexicana.jpg" class="d-block w-100 image-fluid" alt="mexico">
+            <img src="images/oaxaca.jpg" class="d-block w-100 image-fluid" alt="mexico">
             <div class="carousel-caption d-none d-md-block"> 
             </div>
           </div>
