--- a/FINAL TASK/page2.html
+++ b/FINAL TASK/page2.html
@@ -101,14 +101,14 @@
     <div class="row justify-content-end">
         <div class="col-4">
         <div class="pagination">
-          <span class="border-right"><a href="#">❮</a></span> 
+          <span class="border-right"><a href="index.html">❮</a></span> 
             <a href="index.html">1</a>
             <a href="page2.html">2</a>
             <a href="page3.html">3</a>
             <a href="page4.html">4</a>
             <a href="page5.html">5</a>
-            <a href="#">6</a>
-            <a href="#">❯</a>
+            <a href="page6.html">6</a>
+            <a href="page6.html">❯</a>
           </div>
          </div> 
     </div>
