--- a/FINAL TASK/page3.html
+++ b/FINAL TASK/page3.html
@@ -61,33 +61,33 @@
      <div><p><h2>Otomi</h2></p></div>
 <div class="row">
     <div class="col-3">
-        <a href="images/otomi2.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+        <a href="images/otomi2.jpg" data-fancybox="galleryOtomi" data-caption="">
             <img src="images/otomi2.jpg" alt="" class="img-fluid rounded"></a>
         
         <div class="row">
             <div class="col-4 p-3">
-                <a href="images/otomi4.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+                <a href="images/otomi4.jpg" data-fancybox="galleryOtomi" data-caption="">
                     <img src="images/otomi4.jpg" alt="" class="img-fluid rounded"></a>     
             </div>
             <div class="col-4 p-3">
-                <a href="images/otomi5.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+                <a href="images/otomi5.jpg" data-fancybox="galleryOtomi" data-caption="">
                 <img src="images/otomi5.jpg" alt="" class="img-fluid rounded"></a>
             </div>
             <div class="col-4 p-3">
-                <a href="images/otomi7.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+                <a href="images/otomi7.jpg" data-fancybox="galleryOtomi" data-caption="">
                     <img src="images/otomi7.jpg" alt="" class="img-fluid rounded"></a>             
             </div></div>
             <div class="row">
             <div class="col-4 p-3">
-                <a href="images/otomi9.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+                <a href="images/otomi9.jpg" data-fancybox="galleryOtomi" data-caption="">
                     <img src="images/otomi9.jpg" alt="" class="img-fluid rounded"></a>
               </div>
             <div class="col-4 p-3">
-                <a href="images/otomi6.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+                <a href="images/otomi6.jpg" data-fancybox="galleryOtomi" data-caption="">
                     <img src="images/otomi6.jpg" alt="" class="img-fluid rounded"></a>
             </div>
             <div class="col-4 p-3">
-                <a href="images/otomi8.jpg" data-fancybox="galleryOtomi" data-caption="Optional caption">
+                <a href="images/otomi8.jpg" data-fancybox="galleryOtomi" data-caption="">
                     <img src="images/otomi8.jpg" alt="" class="img-fluid rounded"></a>
               </div>
         </div>
