--- a/FINAL TASK/success.html
+++ b/FINAL TASK/success.html
@@ -38,6 +38,15 @@
             </ul>
         </div>
     </header>
+    <style>
+        body {
+          background-image: url('images/background-cat.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+        </style>
+
     <div class="container pt-3">
         <div>
           <p><a href="index.html" class="link">Home </a>
