--- a/FINAL TASK/page4.html
+++ b/FINAL TASK/page4.html
@@ -47,7 +47,7 @@
   <span class="text-muted">Login</span></p>
      </div>
    </div>
-<div class="container">
+<div class="container" style="min-height: 65vh;">
     
         <p><h4>Register</h4></p>
     
@@ -85,7 +85,7 @@
           </div>
           <div class="form-control">
             <label for="country"></label>
-            <select class="text-muted" id="country">
+            <select class="text-muted" id="country" style="width: 44%">
               <option>*Country</option>
               <option>Latvia</option>
               <option>Estonia</option>
