--- a/FINAL TASK/index.html
+++ b/FINAL TASK/index.html
@@ -98,9 +98,9 @@
     </div>
     <div class="container">
       <div class="row gx-5">
-        <div class="col-4 p-4">
+        <div class="col-lg-4 col-md-6 col-12 p-4">
           <div class="row border border-secondary">
-            <div class="col-4 pt-3">
+            <div class="col-lg-4 col-12 pt-3">
               <div class="image thumbnail">
                 <img class="img-fluid"src="images/mexican-art.jpeg">
               </div>
@@ -114,9 +114,9 @@
           </div>
         
         </div>
-        <div class="col-4 p-4">
+        <div class="col-lg-4 col-md-6 col-12 p-4">
           <div class="row border border-secondary">
-            <div class="col-4 pt-3">
+            <div class="col-lg-4 col-12 pt-3">
               <div class="image thumbnail">
                 <img class="img-fluid"src="images/talavera.jpg">
               </div>
@@ -127,9 +127,9 @@
           </div>
 
         </div>
-        <div class="col-4 p-4">
+        <div class="col-lg-4 col-md-6 col-12 p-4">
           <div class="row border border-secondary">
-            <div class="col-4 pt-3">
+            <div class="col-lg-4 col-12 pt-3">
               <div class="image thumbnail">
                 <img class="img-fluid"src="images/alebrije.jpg">
               </div>
