--- a/FINAL TASK/page2.html
+++ b/FINAL TASK/page2.html
@@ -48,13 +48,13 @@
   <span class="text-muted">Articles</span></p>
      </div>
 <div class="row">
-<div class="col-2 p-3 mb-3 border border-secondary">
+<div class="col-md-2 col-12 p-3 mb-3 border border-secondary">
 <div class="">
     <img width="100%" src="images/mexican-art.jpeg" alt="" class="img-fluid">
 </div>
 
 </div>
-<div class="col-10">
+<div class="col-md-10 col-12">
     <div class="text-justify article">
         <p>
             <a href="page3.html"> <h5>Otomi</h5></a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quam et dicta, neque veritatis error natus, sapiente, aperiam voluptate vel sunt harum repellat autem eaque nisi. Saepe porro doloribus id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis exercitationem obcaecati in incidunt vitae alias reiciendis delectus quisquam dolore debitis itaque officia mollitia excepturi accusamus explicabo, quod libero nesciunt nisi.
@@ -64,13 +64,13 @@
 <hr/>
 </div>
 <div class="row">
-    <div class="col-2 p-3 mb-3 border border-secondary">
+    <div class="col-md-2 col-12 p-3 mb-3 border border-secondary">
     <div class="">
         <img width="100%" src="images/talavera.jpg" alt="" class="img-fluid">
     </div>
     
     </div>
-    <div class="col-10">
+    <div class="col-md-10 col-12">
         <div class="text-justify article">
             <p>
                <h5>Talavera</h5> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta illo aperiam odit dignissimos. Nobis unde amet dicta distinctio ut eum, officia, porro aliquid aliquam consequatur minus, magnam inventore commodi perspiciatis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus dolorem corporis optio similique ea nulla, est nisi, animi pariatur unde voluptatem laboriosam eveniet, at eos cum? Voluptatem, explicabo laborum?
@@ -80,13 +80,13 @@
 <hr/>
     </div>
     <div class="row">
-        <div class="col-2 p-3 border border-secondary">
+        <div class="col-md-2 col-12 p-3 border border-secondary">
         <div class="">
             <img width="100%" src="images/alebrije.jpg" alt="" class="img-fluid">
         </div>
         
         </div>
-        <div class="col-10">
+        <div class="col-md-10 col-12">
             <div class="text-justify article">
                 <p>
                    <h5>Alebrijes</h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magni voluptatibus, quae quod perferendis, doloremque consequatur, officia itaque consectetur sit est praesentium delectus possimus beatae pariatur quibusdam hic cupiditate in. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nobis delectus sit dolores, quis velit eius, debitis odit distinctio quia iure perferendis quidem laboriosam? Rerum ratione eveniet optio a dolores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem nobis cupiditate quis possimus dolores numquam necessitatibus illum adipisci ipsa maxime voluptas pariatur qui soluta repudiandae quisquam, tenetur maiores, eum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis et facere repudiandae perferendis! Id ducimus beatae pariatur hic quo neque! Minima eaque provident quas sit eos eveniet est quos rerum.
