--- a/FINAL TASK/page5.html
+++ b/FINAL TASK/page5.html
@@ -40,7 +40,7 @@
     </header>
    <div class="container mt-3">
        <div class="row">
-          <div class="col-10"> <p><h2>About us</h2></p></div>
+          <div class="col-10"> <p><h2>Who created this?</h2></p></div>
         </div>
         
 <div class="row justify-content-start">
