--- a/FINAL TASK/page4.html
+++ b/FINAL TASK/page4.html
@@ -79,7 +79,7 @@
           </div>
           <div class="form-control">
             <label for="lastName"></label>
-            <input type="text" placeholder="*Last name" id="lastName">
+            <input type="text" placeholder="Last name" id="lastName">
            
             <small></small>
           </div>
