--- a/FINAL TASK/success.html
+++ b/FINAL TASK/success.html
@@ -42,12 +42,11 @@
         body {
           background-image: url('images/background-cat.jpg');
           background-repeat: no-repeat;
-          background-attachment: fixed;
           background-size: cover;
         }
         </style>
 
-    <div class="container pt-3">
+    <div class="container">
         <div>
           <p><a href="index.html" class="link">Home </a>
          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -55,12 +54,11 @@
            </svg>
       <span class="text-muted">Chat</span></p>
          </div>
-         <div class="row"><h5>Chat</h5>
-         </div>
        </div>
-       <div class="container thankyou">
+       <div class="container pt-5 thankyou">
+           <div class="row">
         <h3>Thank you! We will be sending a cat over shortly!</h3>
-            
+            </div>
         </div>
 
        </div>
