--- a/FINAL TASK/page5.html
+++ b/FINAL TASK/page5.html
@@ -91,7 +91,7 @@ Next time I better took a plane. And now I am here, in Latvia, trying to wrap my
                 <h4>CEO</h4> 
                 </div></div>
                <div class="row text-justify">
-            <p>My name is Robin. I am Batman's tale, assistant and the purpose of my life is to protect him and never leave his side. My nails are always sharp, human, spider or dog comes our direction. </p>
+            <p>My name is Robin. I am Batman's tale, assistant and the purpose of my life is to protect him and never leave his side. My nails are always sharp, human, spider or dog comes our direction. <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat molestiae quaerat, dolorem quidem sed voluptates sit dignissimos repudiandae quasi ducimus, qui pariatur praesentium dolorum odio laboriosam commodi cupiditate incidunt adipisci! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet dicta at architecto quo totam ab quisquam modi error recusandae vitae. Provident deleniti alias autem placeat rem commodi eveniet, maxime pariatur. </p>
 </div></div>
 </div></div>
    
@@ -112,7 +112,7 @@ Next time I better took a plane. And now I am here, in Latvia, trying to wrap my
                 <h4>CEO</h4> 
                 </div></div>
                <div class="row text-justify">
-            <p>Karens and their kind. Kinda useful when one needs to get into the snack drawer or is cold. Otherwise... much to learn. How to catch a fly, how to hunt a decent meal. Small Karens might have hope.</p>
+            <p>Karens and their kind. Kinda useful when one needs to get into the snack drawer or is cold. Otherwise... Very needy. Make noise at nap times. Need to learn so much. How to catch a fly, how to hunt a decent meal. Small Karens might have hope. <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere doloremque quas, laboriosam non quasi provident natus nihil vel neque suscipit dignissimos consequuntur veniam autem debitis libero delectus, quibusdam tempore cum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam porro laboriosam dolores impedit voluptate expedita delectus iste dolorum dignissimos doloremque aliquid, facilis nisi ullam consequatur at distinctio incidunt hic eum!</p>
 </div></div>
 </div></div>
   
